[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Controls/DataPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Controls/TabTitle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/SoldTransactionsLogTab.gd" type="Script" id=3]
[ext_resource path="res://Scenes/SoldTransactionsLog.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "FadeIn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.5 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="SoldTransactionLogTab" type="Control" groups=[
"Tab",
]]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -104.0
custom_minimum_size = Vector2( 920, 600 )
clip_contents = true
mouse_filter = 1
size_flags_horizontal = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -31.9999
custom_minimum_size = Vector2( 920, 600 )
theme_override_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabTitle" parent="VBoxContainer" instance=ExtResource( 2 )]
offset_right = 920.0
custom_minimum_size = Vector2( 920, 72 )

[node name="MarginContainer" parent="VBoxContainer/TabTitle" index="0"]
offset_bottom = 12.0
custom_minimum_size = Vector2( 920, 72 )

[node name="Title" parent="VBoxContainer/TabTitle/MarginContainer" index="0"]
offset_top = 22.0
offset_right = 904.0
offset_bottom = 62.0
text = "Sold Transactions Log"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 72.0
offset_right = 920.0
offset_bottom = 168.0
custom_minimum_size = Vector2( 920, 96 )
theme_override_constants/separation = 16

[node name="TotalGains" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 296.0
offset_bottom = 96.0

[node name="ColorRect" parent="VBoxContainer/HBoxContainer/TotalGains/MarginContainer" index="0"]
offset_right = 296.0
offset_bottom = 88.0

[node name="CenterContainer" parent="VBoxContainer/HBoxContainer/TotalGains/MarginContainer" index="1"]
offset_right = 296.0
offset_bottom = 88.0

[node name="VBoxContainer" parent="VBoxContainer/HBoxContainer/TotalGains/MarginContainer/CenterContainer" index="0"]
offset_left = 96.0
offset_top = 13.0
offset_right = 199.0
offset_bottom = 66.0

[node name="Title" parent="VBoxContainer/HBoxContainer/TotalGains/MarginContainer/CenterContainer/VBoxContainer" index="0"]
offset_right = 103.0
text = "Total Gains"

[node name="HBoxContainer" parent="VBoxContainer/HBoxContainer/TotalGains/MarginContainer/CenterContainer/VBoxContainer" index="1"]
offset_right = 103.0

[node name="DataLabel" parent="VBoxContainer/HBoxContainer/TotalGains/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer" index="0"]
offset_right = 42.0
text = "$0.00"

[node name="TotalAmountPaid" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 312.0
offset_right = 608.0
offset_bottom = 96.0

[node name="ColorRect" parent="VBoxContainer/HBoxContainer/TotalAmountPaid/MarginContainer" index="0"]
offset_right = 296.0
offset_bottom = 88.0

[node name="CenterContainer" parent="VBoxContainer/HBoxContainer/TotalAmountPaid/MarginContainer" index="1"]
offset_right = 296.0
offset_bottom = 88.0

[node name="VBoxContainer" parent="VBoxContainer/HBoxContainer/TotalAmountPaid/MarginContainer/CenterContainer" index="0"]
offset_left = 102.0
offset_top = 13.0
offset_right = 194.0
offset_bottom = 66.0

[node name="Title" parent="VBoxContainer/HBoxContainer/TotalAmountPaid/MarginContainer/CenterContainer/VBoxContainer" index="0"]
offset_right = 92.0
text = "Total Paid"

[node name="HBoxContainer" parent="VBoxContainer/HBoxContainer/TotalAmountPaid/MarginContainer/CenterContainer/VBoxContainer" index="1"]
offset_right = 92.0

[node name="TotalAmountSold" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 624.0
offset_right = 920.0
offset_bottom = 96.0

[node name="ColorRect" parent="VBoxContainer/HBoxContainer/TotalAmountSold/MarginContainer" index="0"]
offset_right = 296.0
offset_bottom = 88.0

[node name="CenterContainer" parent="VBoxContainer/HBoxContainer/TotalAmountSold/MarginContainer" index="1"]
offset_right = 296.0
offset_bottom = 88.0

[node name="VBoxContainer" parent="VBoxContainer/HBoxContainer/TotalAmountSold/MarginContainer/CenterContainer" index="0"]
offset_left = 102.0
offset_top = 13.0
offset_right = 193.0
offset_bottom = 66.0

[node name="Title" parent="VBoxContainer/HBoxContainer/TotalAmountSold/MarginContainer/CenterContainer/VBoxContainer" index="0"]
offset_right = 91.0
text = "Total Sold"

[node name="HBoxContainer" parent="VBoxContainer/HBoxContainer/TotalAmountSold/MarginContainer/CenterContainer/VBoxContainer" index="1"]
offset_right = 91.0

[node name="DataPanel4" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 702.0
offset_right = 920.0
offset_bottom = 96.0

[node name="SoldTransactionsLog" parent="VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 168.0
offset_right = 920.0
offset_bottom = 600.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 1 )

[connection signal="CalcualtedTotalPaidPrice" from="VBoxContainer/SoldTransactionsLog" to="." method="_on_SoldTransactionsLog_CalcualtedTotalPaidPrice"]
[connection signal="CalcualtedTotalSoldPrice" from="VBoxContainer/SoldTransactionsLog" to="." method="_on_SoldTransactionsLog_CalcualtedTotalSoldPrice"]
[connection signal="CalculatedPercentGains" from="VBoxContainer/SoldTransactionsLog" to="." method="_on_SoldTransactionsLog_CalculatedPercentGains"]
[connection signal="CalculatedTotalGains" from="VBoxContainer/SoldTransactionsLog" to="." method="_on_SoldTransactionsLog_CalculatedTotalGains"]

[editable path="VBoxContainer/TabTitle"]
[editable path="VBoxContainer/HBoxContainer/TotalGains"]
[editable path="VBoxContainer/HBoxContainer/TotalAmountPaid"]
[editable path="VBoxContainer/HBoxContainer/TotalAmountSold"]
